--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Nanod10/oca-php-api",
+    "name": "nanod10/oca-php-api",
     "description": "PHP class for OCA Express Pak",
     "keywords": ["oca", "oca express pak"],
     "license": "GPL-3.0+",
